--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.exoplatform</groupId>
   <artifactId>parent</artifactId>
   <name>eXo parent POM</name>
-  <version>trunk</version>
+  <version>1.1.0-SNAPSHOT</version>
   <description>Provides default project configuration for eXo projects</description>
   <packaging>pom</packaging>
 
@@ -13,10 +13,22 @@
   </organization>
 
   <build>
+
+     <pluginManagement>
+	      <plugins>
+	        <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <configuration>
+	            <source>1.5</source>
+	            <target>1.5</target>
+	          </configuration>
+        </plugin>
+        </plugins>
+     </pluginManagement>
+
      <plugins>
-     
-     	<!-- This plugins triggers the generation of a jar containing the source code when the
-     	     jar phase is executed -->  
+     	<!-- generation of a jar containing the source code when the jar phase is executed -->
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
