--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.exoplatform</groupId>
   <artifactId>parent</artifactId>
   <name>eXo parent POM</name>
-  <version>trunk</version>
+  <version>1.1.0</version>
   <description>Provides default project configuration for eXo projects</description>
   <packaging>pom</packaging>
 
@@ -12,27 +12,175 @@
     <url>http://www.exoplatform.com</url>
   </organization>
 
+  <scm>
+    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/1.1.0</connection>
+    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/1.1.0</developerConnection>
+    <url>http://fisheye.exoplatform.org/browse/projects/parent/tags/1.1.0</url>
+  </scm>
+
+  <distributionManagement>
+    <repository>
+     <id>exo-releases</id>
+     <name>exo releases</name>
+     <url>http://archiva.exoplatform.org/archiva/repository/exo-releases</url>
+    </repository>
+  </distributionManagement>
+
+  <properties>
+     <exo.product.name>eXo Platform</exo.product.name>
+     <exo.product.specification>N/A</exo.product.specification>
+  </properties>
+
+
   <build>
-     <plugins>
-     
-     	<!-- This plugins triggers the generation of a jar containing the source code when the
-     	     jar phase is executed -->  
+
+    <pluginManagement>
+      <plugins>
         <plugin>
-           <groupId>org.apache.maven.plugins</groupId>
-           <artifactId>maven-source-plugin</artifactId>
-           <version>2.0.3</version>
-           <inherited>true</inherited>
-           <executions>
-              <execution>
-                 <id>attach-sources</id>
-                 <goals>
-                    <goal>jar</goal>
-                 </goals>
-              </execution>
-           </executions>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.0.2</version>
         </plugin>
 
-     </plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.0-beta-8</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.4.3</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.0.2</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.2</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>buildnumber-maven-plugin</artifactId>
+          <version>1.0-beta-2</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
+
+    <plugins>
+      <!-- Compilation Plugin Configuration -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+          <!-- optimize>${exo.compile.optimize}</otpimze -->
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <arguments>-Dmaven.test.skip=true</arguments>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <!-- allowTimestampedSnapshots>true</allowTimestampedSnapshots - Should not be released with SNAPSHOTs-->
+          <goals>install</goals>
+        </configuration>
+      </plugin>
+
+
+      <!-- generation of a jar containing the source code when the jar phase is executed -->
+      <plugin>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-source-plugin</artifactId>
+       <version>2.0.3</version>
+       <inherited>true</inherited>
+       <executions>
+          <execution>
+             <id>attach-sources</id>
+             <goals>
+                <goal>jar</goal>
+             </goals>
+          </execution>
+       </executions>
+      </plugin>
+
+      <!-- Manifest management -->
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <configuration>
+        <warSourceExcludes>WEB-INF/lib/*.jar</warSourceExcludes>
+        <archive>
+          <manifestEntries>
+            <SCM-Revision>${buildNumber}</SCM-Revision>
+            <SCM-URL>${project.scm.connection}</SCM-URL>
+            <Specification-Title>${exo.product.name}</Specification-Title>
+            <Specification-Version>${exo.product.specification}</Specification-Version>
+            <Specification-Vendor>eXo Platform SAS</Specification-Vendor>
+            <Implementation-Title>${project.name}</Implementation-Title>
+            <Implementation-Version>${project.version}</Implementation-Version>
+            <Implementation-Vendor>eXo Platform SAS</Implementation-Vendor>
+          </manifestEntries>
+        </archive>
+      </configuration>
+      </plugin>
+
+      <!-- Manifest management -->
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifestEntries>
+            <SCM-Revision>${buildNumber}</SCM-Revision>
+            <SCM-URL>${project.scm.connection}</SCM-URL>
+            <Specification-Title>${exo.product.name}</Specification-Title>
+            <Specification-Version>${exo.product.specification}</Specification-Version>
+            <Specification-Vendor>eXo Platform SAS</Specification-Vendor>
+            <Implementation-Title>${project.name}</Implementation-Title>
+            <Implementation-Version>${project.version}</Implementation-Version>
+            <Implementation-Vendor>eXo Platform SAS</Implementation-Vendor>
+          </manifestEntries>
+        </archive>
+      </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+        </configuration>
+      </plugin>
+
+    </plugins>
   </build>
+
 
 </project>
