--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.exoplatform</groupId>
   <artifactId>parent</artifactId>
   <name>eXo parent POM</name>
-  <version>1.1.2-SNAPSHOT</version>
+  <version>1.1.2</version>
   <description>Provides default project configuration for eXo projects</description>
   <packaging>pom</packaging>
 
@@ -13,9 +13,9 @@
   </organization>
 
   <scm>
-    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/trunk</connection>
-    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/trunk</developerConnection>
-    <url>http://fisheye.exoplatform.org/browse/projects/parent/trunk</url>
+    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/1.1.2</connection>
+    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/1.1.2</developerConnection>
+    <url>http://fisheye.exoplatform.org/browse/projects/parent/tags/1.1.2</url>
   </scm>
 
   <distributionManagement>
