--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <version.buildnumber.plugin>1.0-beta-3</version.buildnumber.plugin>
     <version.clean.plugin>2.3</version.clean.plugin>
     <version.checkstyle.plugin>2.3</version.checkstyle.plugin>
+    <version.clover2.plugin>2.5.1</version.clover2.plugin>
     <version.cobertura.plugin>2.3</version.cobertura.plugin>
     <version.compiler.plugin>2.0.2</version.compiler.plugin>
     <version.dependency.plugin>2.1</version.dependency.plugin>
@@ -159,6 +160,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>${version.clean.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>com.atlassian.maven.plugins</groupId>
+          <artifactId>maven-clover2-plugin</artifactId>
+          <version>${version.clover2.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
