--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
     <!-- **************** -->
     <version.antrun.plugin>1.3</version.antrun.plugin>
     <version.assembly.plugin>2.2-beta-4</version.assembly.plugin>
+    <version.buildhelper.plugin>1.4</version.buildhelper.plugin>
     <version.buildnumber.plugin>1.0-beta-3</version.buildnumber.plugin>
     <version.clean.plugin>2.3</version.clean.plugin>
     <version.checkstyle.plugin>2.3</version.checkstyle.plugin>
@@ -145,6 +146,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>${version.assembly.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>${version.buildhelper.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
