--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
   </organization>
 
   <scm>
-    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/1.1.1</connection>
-    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/1.1.1</developerConnection>
-    <url>http://fisheye.exoplatform.org/browse/projects/parent/tags/1.1.1</url>
+    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/branches/1.x</connection>
+    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/branches/1.x</developerConnection>
+    <url>http://fisheye.exoplatform.org/browse/projects/parent/branches/1.x</url>
   </scm>
 
   <distributionManagement>
