--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.exoplatform</groupId>
   <artifactId>exo.parent</artifactId>
-  <version>4-SNAPSHOT</version>
+  <version>4</version>
   <packaging>pom</packaging>
   <name>eXo parent POM</name>
   <description>Provides default project configuration for eXo projects</description>
@@ -27,9 +27,9 @@
     <url>http://builder.exoplatform.org/hudson</url>
   </ciManagement>
   <scm>
-    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/trunk</connection>
-    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/trunk</developerConnection>
-    <url>http://fisheye.exoplatform.org/browse/projects/parent/trunk</url>
+    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/4</connection>
+    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/4</developerConnection>
+    <url>http://fisheye.exoplatform.org/browse/projects/parent/tags/4</url>
   </scm>
   <distributionManagement>
     <repository>
