PAR-69 : The release fails because artifacts aren't installed

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
     <!-- maven-pmd-plugin -->
     <targetJdk>${maven.compiler.target}</targetJdk>
     <!-- maven-release-plugin -->
+    <preparationGoals>clean install</preparationGoals>
     <useReleaseProfile>false</useReleaseProfile>
     <arguments>-Prelease</arguments>
     <autoVersionSubmodules>true</autoVersionSubmodules>
