PAR-73 : pluginManagement : Add org.codehaus.mojo:javacc-maven-plugin:2.6

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>javacc-maven-plugin</artifactId>
+          <version>${version.javacc.plugin}</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>${version.javadoc.plugin}</version>
@@ -358,6 +363,7 @@
     <version.idea.plugin>2.2</version.idea.plugin>
     <version.install.plugin>2.3</version.install.plugin>
     <version.jar.plugin>2.3</version.jar.plugin>
+    <version.javacc.plugin>2.6</version.javacc.plugin>
     <version.javadoc.plugin>2.6.1</version.javadoc.plugin>
     <version.javancss.plugin>2.0</version.javancss.plugin>
     <version.jdepend.plugin>2.0-beta-2</version.jdepend.plugin>
