PAR-91 : Add settings for clover

--- a/pom.xml
+++ b/pom.xml
@@ -394,6 +394,13 @@
     <!-- ************** -->
     <!-- Cross plugins settings -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- maven-clover2-plugin -->
+    <!-- required when we generate sources - javacc, ... -->
+    <maven.clover.includesAllSourceRoots>true</maven.clover.includesAllSourceRoots>
+    <!-- where snapshots are stored to use clover optimization -->
+    <maven.clover.snapshot>${user.home}/.clover/${groupId}-${artifactId}/clover.snapshot</maven.clover.snapshot>
+    <!-- where historical data are stored -->
+    <maven.clover.historyDir>${user.home}/.clover/${groupId}-${artifactId}/clover.history</maven.clover.historyDir>
     <!-- maven-compiler-plugin -->
     <maven.compiler.target>1.5</maven.compiler.target>
     <maven.compiler.source>1.5</maven.compiler.source>
