PAR-93 : pluginManagement : Add org.exoplatform.maven.plugins:maven-exopc-plugin:1.0.5

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
     <version.enforcer.plugin>1.0-beta-1</version.enforcer.plugin>
     <version.exec.plugin>1.1.1</version.exec.plugin>
     <version.exobuild.plugin>1.2.0</version.exobuild.plugin>
+    <version.exopc.plugin>1.0.5</version.exopc.plugin>
     <version.failsafe.plugin>2.4.3-alpha-1</version.failsafe.plugin>
     <version.findbugs.plugin>2.3</version.findbugs.plugin>
     <version.idea.plugin>2.2</version.idea.plugin>
@@ -248,6 +249,11 @@
           <groupId>org.exoplatform.maven.plugins</groupId>
           <artifactId>maven-exobuild-plugin</artifactId>
           <version>${version.exobuild.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.exoplatform.maven.plugins</groupId>
+          <artifactId>maven-exopc-plugin</artifactId>
+          <version>${version.exopc.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
