--- a/pom.xml
+++ b/pom.xml
@@ -96,8 +96,8 @@
     <!--  Upgrading JIBX doesn't work for JCR (at least without modifying the project)-->
     <version.jibx.plugin>1.1.6a</version.jibx.plugin>
     <version.jxr.plugin>2.1</version.jxr.plugin>
+    <!-- maven-project-info-reports-plugin -->
     <version.pir.plugin>2.1.2</version.pir.plugin>
-    <!-- maven-project-info-reports-plugins -->
     <version.plugin.plugin>2.5.1</version.plugin.plugin>
     <version.pmd.plugin>2.4</version.pmd.plugin>
     <version.rar.plugin>2.2</version.rar.plugin>
@@ -138,6 +138,8 @@
     <jdk.min.version>${maven.compiler.source}</jdk.min.version>
     <!-- maven-idea-plugin & maven-eclipse-plugin -->
     <downloadSources>true</downloadSources>
+    <!--  maven-javadoc-plugin -->
+    <quiet>true</quiet>
     <!-- maven-pmd-plugin -->
     <targetJdk>${maven.compiler.target}</targetJdk>
     <!-- maven-release-plugin -->
@@ -576,6 +578,21 @@
                     </requirePluginVersions>
                   </rules>
                 </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- 
+            Generates Javadoc
+           -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
               </execution>
             </executions>
           </plugin>
