PAR-109 : Use releaseProfiles property and add a defaulteXoReleaseProfiles property to easily extends default settings PAR-110 : Do not generate binaries in release;prepare phase

--- a/pom.xml
+++ b/pom.xml
@@ -155,10 +155,10 @@
     <!-- maven-pmd-plugin -->
     <targetJdk>${maven.compiler.target}</targetJdk>
     <!-- maven-release-plugin -->
-    <preparationGoals>clean install</preparationGoals>
     <useReleaseProfile>false</useReleaseProfile>
-    <arguments>-Prelease</arguments>
     <autoVersionSubmodules>true</autoVersionSubmodules>
+    <defaulteXoReleaseProfiles>release</defaulteXoReleaseProfiles>
+    <releaseProfiles>${defaulteXoReleaseProfiles}</releaseProfiles>
   </properties>
   <build>
     <pluginManagement>
