PAR-114 : pluginManagement : Add org.apache.maven.plugins:maven-docck-plugin:1.0

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
     <version.compiler.plugin>2.3</version.compiler.plugin>
     <version.dependency.plugin>2.1</version.dependency.plugin>
     <version.deploy.plugin>2.5</version.deploy.plugin>
+    <version.docck.plugin>1.0</version.docck.plugin>
     <version.eclipse.plugin>2.8</version.eclipse.plugin>
     <version.ear.plugin>2.4.1</version.ear.plugin>
     <version.ejb.plugin>2.2.1</version.ejb.plugin>
@@ -223,6 +224,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>${version.deploy.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-docck-plugin</artifactId>
+          <version>${version.docck.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
